# whatsopen

./: .gitignore  .gitmodules  README.md  sqlprototypes  whatsopen.cabal  whatsopen.sql  whatsopenapi.cabal
api/: README.md  whatsopen.hamlet  whatsopen.lucius  whatsopenapi.cabal
api/app/: Main.hs
api/config/: keter.yaml
api/src/: DataDef.hs  Database.hs  Main.hs  WhatsOpen.hs
api/static/: whatsopen.css
frontend/: Gruntfile.js  README.md  api.js  index.html  package.json
frontend/dev/: whatsopen.css  whatsopen.less
frontend/release/: whatsopen.min.css
src/: WhatsOpen.hs
templates/: storelist.hamlet
