name:                whatsopen
version:             0.1.0.0
synopsis:            HTTP API and website for WhatsOpen at RIT project
-- description:         
license:             MIT
license-file:        LICENSE
author:              Stephen Demos (sdemos)
maintainer:          stphndemos@gmail.com
copyright:           2016 Stephen Demos
category:            Web
build-type:          Simple
cabal-version:       >=1.10

Library
  default-language : Haskell2010
  hs-source-dirs   : src
  exposed-modules  : WhatsOpen
  ghc-options      : -threaded -rtsopts -with-rtsopts=-N
  build-depends    : base
                   , time
                   , old-time
                   , mtl
                   , text
                   , contravariant
                   , servant
                   , servant-server
                   , servant-blaze
                   , aeson
                   , warp
                   , convertible
                   , wai
                   , shakespeare
                   , blaze-html
                   , blaze-markup
                   , http-media
                   , hasql

Executable whatsopen
  default-language : Haskell2010
  hs-source-dirs   : app
  main-is          : Main.hs
  ghc-options      : -threaded -rtsopts -with-rtsopts=-N
  build-depends    : base
                   , servant-server
                   , warp
                   , whatsopen

source-repository head
  type:     git
  location: https://github.com/sdemos/whatsopen
